# Clockwork

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  fens.book
.github/workflows/: clang-format.yml  clockwork.yml  codeql.yml  compilation.yml  linter.yml  prerelease.yml
scripts/: auto_format.sh  check_git_hash.cmake  checkout_lps.cmake  distr.py  extract-data.py  heat.py  meaner.py  phase-dist-filter.py  reflectiveness.py
src/: bench.cpp  bench.hpp  bitboard.hpp  board.cpp  board.hpp  common.hpp  dbg_tools.cpp  dbg_tools.hpp  eval_constants.hpp  eval_types.hpp  evaltune_main.cpp  evaluation.cpp  evaluation.hpp  geometry.cpp  geometry.hpp  history.cpp  history.hpp  main.cpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  movepick.cpp  movepick.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  psqt_state.hpp  rays.hpp  repetition_info.cpp  repetition_info.hpp  search.cpp  search.hpp  see.hpp  speedtest.cpp  square.hpp  tm.cpp  tm.hpp  tt.cpp  (+7 more)
src/tuning/: dataset.hpp  globals.hpp  graph.cpp  graph.hpp  info.hpp  loss.hpp  optim.hpp  value.cpp  value.hpp
src/util/: bit.hpp  ios_fmt_guard.hpp  log2.hpp  parse.hpp  pretty.hpp  random.hpp  static_vector.hpp  types.h  types.hpp  vec.hpp  version.cpp.in  version.hpp
src/util/vec/: avx2.hpp  avx512.hpp  sse2.hpp
tests/: test.hpp  test_is_legal.cpp  test_perft.cpp  test_piece_count.cpp  test_position.cpp  test_repetition.cpp  test_see.cpp  test_see_prototype.cpp  test_static_vector.cpp
